Header and footer changes:  - set fetchpriority on header images  - ensure scroll css var is initialized on page load  - remove deleted award post type from nav logic  - switch overflow "hidden" to "clip" where possible  - adjust how translated API URLs are built

--- a/src/css/components/3_organisms/header.css
+++ b/src/css/components/3_organisms/header.css
@@ -589,12 +589,12 @@ body.om-position-floating-top {
   float: left;
   height: 48px;
   margin-right: 16px;
-  overflow: hidden;
+  overflow: clip;
   width: 48px;
 }
 .c-submenu .o-menu__title .body {
   display: block;
-  overflow: hidden;
+  overflow: clip;
 }
 .c-submenu .o-menu__title .description {
   display: block;
@@ -606,7 +606,7 @@ body.om-position-floating-top {
   color: var(--c-featured-color, #32363b);
   display: flex;
   max-width: 565px;
-  overflow: hidden;
+  overflow: clip;
   padding: 16px 24px 24px;
   position: relative;
 }
@@ -941,7 +941,7 @@ body.om-position-floating-top {
   text-transform: uppercase;
 }
 .c-site-header__topbar .c-notification__message {
-  overflow: hidden;
+  overflow: clip;
   text-overflow: ellipsis;
   white-space: nowrap;
 }
@@ -966,7 +966,7 @@ body.om-position-floating-top {
   white-space: nowrap;
 }
 .c-site-header__topbar .o-menu__item--search .o-menu__link {
-  overflow: hidden;
+  overflow: clip;
   white-space: nowrap;
   width: 16px;
 }
